Make optional plugin installation failures deployment warnings
